--- a/static/less/landing/landing.less
+++ b/static/less/landing/landing.less
@@ -1,4 +1,4 @@
-@import "lib/bootstrap/bootstrap.less";
+@import "../lib/bootstrap/bootstrap.less";
 @import "landing-vars.less";
 
 body {
@@ -89,13 +89,14 @@ span, a {
 
                     .panel-title {
                         font-family: @font-family-custom-panel;
+                        font-size: 20px;
                         color: @gray-dark;
                     }
                 }
 
                 .panel-body {
                     line-height: 1.4em;
-                    font-size: @font-size-base;
+                    font-size: 16px;
                     text-align: justify;
                 }
             }
@@ -224,10 +225,6 @@ hr {margin-left:0px;}
                 float: none;
                 margin: auto;
                 margin-bottom: 15px;
-            }
-
-            #register-button {
-                //font-size: @font-size-base;
             }
         }
     }
