--- a/templates/landing.html
+++ b/templates/landing.html
@@ -128,7 +128,7 @@
 
                     <div class="row-break md lg"></div>
 
-                    <div class="panel-wrapper">
+                    <div class="panel-wrapper col-md-offset-2">
                         <div class="panel panel-default">
 
                             <div class="panel-heading">
