--- a/templates/landing.html
+++ b/templates/landing.html
@@ -85,7 +85,7 @@
                             </div><!-- .panel-heading -->
 
                             <div class="panel-body">
-                                Esqueça as planilhas! Controle suas finanças com facilidade, leva apenas alguns segundos para cadastrar suas movimentações.
+                                Controle suas finanças com facilidade. Levam apenas alguns segundos para cadastrar suas movimentações.
                             </div><!-- .panel-body -->
                         </div><!-- .panel.panel-default -->
                     </div>
@@ -157,7 +157,7 @@
                             </div><!-- .panel-heading -->
 
                             <div class="panel-body">
-                                O cadastro leva apenas alguns instantes, crie sua conta gratuitamente e começe a usar!
+                                O cadastro leva apenas alguns instantes. Crie sua conta gratuitamente e começe a usar!
                                 <a class="register-link highlight" href="{% url "register" %}">Clique aqui para criar sua conta</a>
                             </div><!-- .panel-body -->
                         </div><!-- .panel.panel-default -->
