--- a/static/less/webapp-theme.less
+++ b/static/less/webapp-theme.less
@@ -10,7 +10,7 @@
 
 // used in inputs, panels, tables
 @component-border-color:    #ccc;
-@component-bg-color:     #e7e6e6;
+@component-bg-color:        #E6E4EB;
 
 
 // Grays
@@ -25,7 +25,7 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         #617992;
+@brand-primary:         #4A4C78;
 @brand-success:         #5cb85c;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
