--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -1,7 +1,39 @@
-@import "webapp-theme.less";
 //
 // Variables
 // --------------------------------------------------
+
+// Global values
+// --------------------------------------------------
+@white:                 #fdfdfd;
+
+// Charts colors
+@positive:                  #049cdb;
+@negative:                  #9d261d;
+@renevues:                  #46a546;
+@expenses:                  @negative;
+
+// used in inputs, panels, tables
+@component-border-color:    #ccc;
+@component-bg-color:        #E6E4EB;
+
+
+// Grays
+// -------------------------
+@gray-darker:            lighten(#000, 13.5%); // #222
+@gray-dark:              #585b6c;   // font colors
+@gray:                   #807f88;   // #555
+@gray-light:             #9a99a0;   // light bg's
+@gray-lighter:           #eeeeee;   // lighter-bg's
+
+
+// Brand colors
+// -------------------------
+
+@brand-primary:         #4A4C78;
+@brand-success:         #5cb85c;
+@brand-warning:         #f0ad4e;
+@brand-danger:          #d9534f;
+@brand-info:            #5bc0de;
 
 // Scaffolding
 // -------------------------
