enabling category search

--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -23,6 +23,7 @@
 
             ng-model="formData.category"
             category-field
+            data-live-search="true"
 
             required
 
