--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="{% url "index" %}">
-                    <img src="{% static "img/logo-squared.png" %}" class="img-squared brand-logo">
-                    {{ SITE_NAME }}
+                    <img src="{% static "img/niqels-logo-hor.png" %}" class="brand-logo">
                 </a>
             </div>
 
