--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -39,7 +39,7 @@
             </ul>
         </li>
         {% endcomment %}
-        {% include "user-menu.html" %}
+        {% include "webapp/user-menu.html" %}
     </ul>
 </div>
 {% endblock webapp-menu %}
