refactoring less files

--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -1,15 +1,14 @@
-@import "lib/bootstrap/bootstrap.less";
-@import "lib/typeahead.less";
-@import (less) "lib/datepicker.css";
-@import "datepicker-override.less";
+@import "../lib/bootstrap/bootstrap.less";
+@import "../lib/typeahead.less";
+@import (less) "../lib/datepicker.css";
+@import "../datepicker-override.less";
 
-@import "variables.less";
+@import "../variables.less";
 @import "category-list.less";
 @import "settings.less";
 @import "balance.less";
-@import "reports.less";
 @import "charts.less";
-@import "forms.less";
+@import "../forms.less";
 @import "transaction-list.less";
 
 .left-column {
