--- a/static/less/webapp/transaction-list.less
+++ b/static/less/webapp/transaction-list.less
@@ -3,7 +3,7 @@
  * styles for the transaction list.
  */
 
-@import 'variables.less';
+@import '../variables.less';
 
 thead tr th {
     font-style: italic;
