--- a/static/less/landing/landing.less
+++ b/static/less/landing/landing.less
@@ -133,6 +133,7 @@ span, a {
             padding: (@modal-title-padding - 1) (@modal-inner-padding + 4) (@modal-title-padding + 2);
             text-shadow: 1px 1px 1px #333 !important;
             background: @laranja;
+            border-color: darken(@laranja, 5%);
             background-repeat:none;
             &:hover {
                 background: @laranja-dark;
