--- a/static/less/landing/landing-vars.less
+++ b/static/less/landing/landing-vars.less
@@ -27,7 +27,7 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         #617992;
+@brand-primary:         #428bca;
 @brand-success:         #5cb85c;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
