--- a/static/less/landing/landing.less
+++ b/static/less/landing/landing.less
@@ -1,5 +1,6 @@
 @import "../lib/bootstrap/bootstrap.less";
-@import "landing-vars.less";
+//@import "landing-vars.less";
+@import "../variables.less";
 
 body {
     background: @white;
