--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -17,10 +17,17 @@
 @component-bg-color:        #E6E4EB;
 
 
+@azul-claro: #a6a7bf;
+@azul-escuro: #1F214C;
+@azul-escuro-lighter: #4A4C78; // azul escuro mais claro
+@laranja: #BA3500;
+@laranja-dark: #7D2400;
+
+
 // Grays
 // -------------------------
 @gray-darker:            lighten(#000, 13.5%); // #222
-@gray-dark:              #585b6c;   // font colors
+@gray-dark:              #2b2d5d;   // font colors
 @gray:                   #807f88;   // #555
 @gray-light:             #9a99a0;   // light bg's
 @gray-lighter:           #eeeeee;   // lighter-bg's
@@ -44,7 +51,7 @@
 // Links
 // -------------------------
 
-@link-color:            @brand-primary;
+@link-color:            #1F214C;
 @link-hover-color:      darken(@link-color, 15%);
 
 // Typography
@@ -57,6 +64,10 @@
 @font-family-base:        @font-family-sans-serif;
 @font-family-custom-title: "Oxygen", sans-serif;
 @font-family-custom-panel: "Roboto", sans-serif;
+@font-family-custom-title:      "Oxygen", sans-serif;
+@font-family-custom-panel:      "Roboto", sans-serif;
+@font-family-textos:            "Open Sans", sans-serif;
+@font-family-title-textos-h2:   "Roboto Slab", serif;
 
 @font-size-base:          14px;
 @font-size-large:         ceil(@font-size-base * 1.25); // ~18px
