--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -30,7 +30,7 @@
 @gray-dark:              #2b2d5d;   // font colors
 @gray:                   #807f88;   // #555
 @gray-light:             #9a99a0;   // light bg's
-@gray-lighter:           #eeeeee;   // lighter-bg's
+@gray-lighter:           #E6E4EB;   // lighter-bg's
 
 
 // Brand colors
@@ -51,19 +51,16 @@
 // Links
 // -------------------------
 
-@link-color:            #1F214C;
+@link-color:            @azul-escuro;
 @link-hover-color:      darken(@link-color, 15%);
 
 // Typography
 // -------------------------
 
-//@font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-sans-serif:  "Oxygen", Helvetica, Arial, sans-serif;
-@font-family-serif:       Georgia, "Times New Roman", Times, serif;
-@font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace;
-@font-family-base:        @font-family-sans-serif;
-@font-family-custom-title: "Oxygen", sans-serif;
-@font-family-custom-panel: "Roboto", sans-serif;
+@font-family-sans-serif:        "Oxygen", Helvetica, Arial, sans-serif;
+@font-family-serif:             Georgia, "Times New Roman", Times, serif;
+@font-family-monospace:         Monaco, Menlo, Consolas, "Courier New", monospace;
+@font-family-base:              @font-family-sans-serif;
 @font-family-custom-title:      "Oxygen", sans-serif;
 @font-family-custom-panel:      "Roboto", sans-serif;
 @font-family-textos:            "Open Sans", sans-serif;
@@ -382,7 +379,6 @@
 @jumbotron-bg:                   @gray-lighter;
 
 @jumbotron-heading-color:        inherit;
-@jumbotron-custom:               @navbar-inverse-bg;
 
 
 // Form states and alerts
