--- a/static/src/css/landing.css
+++ b/static/src/css/landing.css
@@ -1,3 +1,4 @@
+
 /*!
  * Bootstrap v3.0.0
  *
@@ -322,7 +323,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #eeeeee;
+  border-top: 1px solid #e6e4eb;
 }
 .sr-only {
   position: absolute;
@@ -466,7 +467,7 @@ h4 small,
 .page-header {
   padding-bottom: 9px;
   margin: 40px 0 20px;
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid #e6e4eb;
 }
 ul,
 ol {
@@ -555,7 +556,7 @@ abbr.initialism {
 blockquote {
   padding: 10px 20px;
   margin: 0 0 20px;
-  border-left: 5px solid #eeeeee;
+  border-left: 5px solid #e6e4eb;
 }
 blockquote p {
   font-size: 17.5px;
@@ -576,7 +577,7 @@ blockquote small:before {
 blockquote.pull-right {
   padding-right: 15px;
   padding-left: 0;
-  border-right: 5px solid #eeeeee;
+  border-right: 5px solid #e6e4eb;
   border-left: 0;
 }
 blockquote.pull-right p,
@@ -1579,7 +1580,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .form-control[readonly],
 fieldset[disabled] .form-control {
   cursor: not-allowed;
-  background-color: #eeeeee;
+  background-color: #e6e4eb;
 }
 textarea.form-control {
   height: auto;
@@ -3982,7 +3983,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   font-weight: normal;
   line-height: 1;
   text-align: center;
-  background-color: #eeeeee;
+  background-color: #e6e4eb;
   border: 1px solid #cccccc;
   border-radius: 0px;
 }
@@ -4077,7 +4078,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eeeeee;
+  background-color: #e6e4eb;
 }
 .nav > li.disabled > a {
   color: #9a99a0;
@@ -4092,7 +4093,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
-  background-color: #eeeeee;
+  background-color: #e6e4eb;
   border-color: #1f214c;
 }
 .nav .nav-divider {
@@ -4118,7 +4119,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-radius: 0px 0px 0 0;
 }
 .nav-tabs > li > a:hover {
-  border-color: #eeeeee #eeeeee #dddddd;
+  border-color: #e6e4eb #e6e4eb #dddddd;
 }
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
@@ -4834,7 +4835,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  background-color: #eeeeee;
+  background-color: #e6e4eb;
 }
 .pagination > .active > a,
 .pagination > .active > span,
@@ -4931,7 +4932,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
-  background-color: #eeeeee;
+  background-color: #e6e4eb;
 }
 .pager .next > a,
 .pager .next > span {
@@ -5054,7 +5055,7 @@ a.list-group-item.active > .badge,
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
+  background-color: #e6e4eb;
 }
 .jumbotron h1 {
   line-height: 1;
@@ -5350,7 +5351,7 @@ a.list-group-item .list-group-item-heading {
 a.list-group-item:hover,
 a.list-group-item:focus {
   text-decoration: none;
-  background-color: #eeeeee;
+  background-color: #e6e4eb;
 }
 .list-group-item.active,
 .list-group-item.active:hover,
@@ -5481,7 +5482,7 @@ a.list-group-item:focus {
 }
 .panel-default > .panel-heading {
   color: #2b2d5d;
-  background-color: #eeeeee;
+  background-color: #e6e4eb;
   border-color: #dddddd;
 }
 .panel-default > .panel-heading + .panel-collapse .panel-body {
@@ -7057,7 +7058,7 @@ hr {
   font-weight: 600;
 }
 .footer {
-  background: #eeeeee;
+  background: #e6e4eb;
   height: 25px;
 }
 .footer > h5 {
@@ -7279,3 +7280,4 @@ hr {
     padding-left: 5px;
   }
 }
+
