--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -6,13 +6,13 @@
     <div class="row">
 
         <div class="col-md-2 list-group" id="reports-menu">
-            <a class="list-group-item" ng-class="{active: $state.includes('reports.balance')}" href="#/reports/balance" track="click,Reports,view,balance">
+            <a class="list-group-item" ng-class="{active: $state.includes('reports.balance')}" href="#/reports/balance">
                 {% trans "Balance" %}
             </a>
-            <a class="list-group-item" ng-class="{active: $state.includes('reports.top-categories')}" href="#/reports/top-categories" track="click,Reports,view,top-categories">
+            <a class="list-group-item" ng-class="{active: $state.includes('reports.top-categories')}" href="#/reports/top-categories">
                 {% trans "Top categories" %}
             </a>
-            <a class="list-group-item" ng-class="{active: $state.includes('reports.category-comparison')}" href="#/reports/category-comparison" track="click,Reports,view,comparison">
+            <a class="list-group-item" ng-class="{active: $state.includes('reports.category-comparison')}" href="#/reports/category-comparison">
                 {% trans "Category comparison" %}
             </a>
         </div>
