--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -33,14 +33,10 @@
 
 .btn {
     text-transform: uppercase;
-
-    i {
-        margin-left: 5px;
-    }
 }
 
 a > i[class^="icon"] {
-    margin-left: 5px;
+    //margin-left: 5px;
 }
 
 /* 
