--- a/static/less/webapp/transaction-list.less
+++ b/static/less/webapp/transaction-list.less
@@ -92,6 +92,17 @@ thead tr th {
     margin-bottom: 20px;
     text-align: center;
 
+    .btn {
+        margin-left: 5px !important;
+        margin-right: 5px !important;
+        border: 0;
+        box-shadow: 1px 1px 1px #ccc;
+        height: 100%;
+        i {
+            line-height: initial;
+        }
+    }
+
     .previous-month {
     }
 
