--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -13,9 +13,9 @@
         <div id="transaction-list-options" class="well">
             <div class="month-selector">
             <div class="btn-group">
-                <button class="btn btn-link previous-month" ng-class="{disabled: loading}"><i class="icon-chevron-left icon-" ng-click="moveMonth('subtract')"></i></button>
-                <button class="btn btn-link actual-month" ng-class="{disabled: loading}" month-selector="filterDate"></button>
-                <button class="btn btn-link next-month" ng-class="{disabled: loading}"><i class="icon-chevron-right icon-" ng-click="moveMonth('add')"></i></button>
+                <button class="btn btn-default previous-month" ng-class="{disabled: loading}"><i class="icon-chevron-left" ng-click="moveMonth('subtract')"></i></button>
+                <button class="btn btn-default actual-month" ng-class="{disabled: loading}" month-selector="filterDate"></button>
+                <button class="btn btn-default next-month" ng-class="{disabled: loading}"><i class="icon-chevron-right" ng-click="moveMonth('add')"></i></button>
             </div>
             </div>
 
