new layout for list

--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -61,7 +61,7 @@
 
                 <div id="category(($index))" class="panel-collapse collapse">
                     <div class="panel-body">
-                        <table class="table">
+                        <table class="table table-striped">
                             <thead><tr>
                                 <td class="date-column-header">
                                     {% trans "Date" %}
@@ -114,7 +114,7 @@
                     </h4>
                 </div>
                 <div class="panel-body">
-                    <table class="table">
+                    <table class="table table-striped">
                         <thead><tr>
                             <td class="category-column-header">
                                 {% trans "Category" %}
