--- a/static/less/webapp/transaction-list.less
+++ b/static/less/webapp/transaction-list.less
@@ -27,7 +27,7 @@ thead tr th {
             }
             .active {
                 text-shadow: none;
-                -webkit-box-shadow: none;
+                -webkit-box-shadow: none; //fix this
                 font-weight: bold;
                 text-decoration: underline;
 
@@ -41,30 +41,66 @@ thead tr th {
 
 #transaction-list-panel {
     .transaction-group {
-        .panel-heading .panel-title .group-total {
-            font-family: @font-family-sans-serif;
+        background-color: transparent;
+        box-shadow: none;
+        border: 0;
+        margin-bottom: 25px;
 
-            &.renevue {
-                color: @renevues;
-            }
+        .panel-heading {
+            padding-left: 25px;
+            background-color: transparent;
+            border-bottom: 1px solid #ccc;
+            box-shadow: 0px 5px 2px -4px #ccc;
 
-            &.expense {
-                color: @expenses;
+            .panel-title {
+                .group-total {
+                    font-family: @font-family-sans-serif;
+
+                    &.renevue {
+                        color: @renevues;
+                    }
+
+                    &.expense {
+                        color: @expenses;
+                    }
+                }
             }
         }
 
         .panel-body {
-            background-color: @body-bg;
+            background-color: transparent;
+            padding: 0;
 
             table {
+                border: 1px solid @table-border-color;
+                border-top: 0;
+                border-right: 0;
+                border-bottom: 0;
+                width: initial;
+                margin-left: 25px;
+                margin-right: 15px;
+                margin-bottom: 0;
+
+                td {
+                    border: 0;
+                }
+
                 thead {
+                    td {
+                        padding-top: 30px;
+                    }
                     .category-column-header, .date-column-header, .value-column-header, .action-bar-header {
                         width: 1%;
                     }
                     .value-column-header {
                         text-align: right;
                     }
+                    .action-bar-header {
+                        background-color: transparent;
+                        border-left: 1px solid @table-border-color;
+                    }
                 }
+
                 .transaction-row {
                     .value-column {
                         text-align: right;
@@ -79,8 +115,18 @@ thead tr th {
                         }
                     }
 
-                    .action-bar .delete-transaction:hover {
-                        color: @brand-danger;
+                    td.action-bar {
+                        border-left: 1px solid @table-border-color !important;
+                        border-bottom: 0px !important;
+                        background-color: transparent;
+
+                        .delete-transaction:hover {
+                            color: @brand-danger;
+                        }
+                    }
+
+                    &:last-child td {
+                        border-bottom: 1px solid @table-border-color;
                     }
                 }
             }
