--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -2,6 +2,7 @@
 @import "../lib/typeahead.less";
 @import (less) "../lib/datepicker.css";
 @import "../datepicker-override.less";
+@import "../toastr-override.less";
 
 @import "../variables.less";
 @import "category-list.less";
