--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -12,6 +12,10 @@
 @import "../forms.less";
 @import "transaction-list.less";
 
+body {
+    overflow-y: scroll;
+}
+
 .left-column {
     .make-sm-column(5);
     .make-lg-column(3);
