--- a/templates/landing.html
+++ b/templates/landing.html
@@ -9,7 +9,7 @@
         <meta name="author" content="">
         <link rel="shortcut icon" href="{% static "ico/favicon.ico" %}">
     
-        <title>Niqels - O seu organizador Financeiro Pessoal</title>
+        <title>Niqels - Software para controle financeiro. Online e Grátis.</title>
     
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" type="text/css" href="{% static "css/landing.css" %}" />
